# mode-io-middleware

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MODEIO_PLUGIN_MESSAGE.schema.json  MODEIO_PLUGIN_PROTOCOL.md  QUICKSTART.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: ci.yml  live-smoke.yml
config/: default.json
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.plugins.test.tsx  App.tsx  api.ts  apiRoutes.ts  demoData.ts  i18n.ts  i18nCatalog.ts  i18nFormatters.ts  monitorFilters.ts  pluginManagement.test.ts  pluginManagement.ts  pluginWorkspaceReducer.test.ts  pluginWorkspaceReducer.ts  queryClient.ts  styles.css  traceInsights.ts  types.ts  utils.ts
modeio_middleware/: dev_runtime.py  http_transport.py  plugin_catalog.py  plugin_catalog_discovery.py  plugin_catalog_models.py  plugin_host.py  plugin_inventory.py  resources.py  runtime_config_store.py  runtime_control.py  runtime_home.py
modeio_middleware/cli/: controller_process.py  controller_service.py  controller_state.py  gateway.py  middleware.py  new_plugin.py  plugin_conformance.py  setup.py
modeio_middleware/connectors/: anthropic_http.py  base.py  claude_hooks.py  client_identity.py  openai_http.py
modeio_middleware/core/: client_auth.py  contracts.py  decision.py  engine.py  errors.py  hook_envelope.py  invocation_router.py  payload_codec.py  payload_mutations.py  payload_types.py  pipeline_orchestrator.py  plugin_manager.py  provider_auth.py  provider_policy.py  request_context.py  response_assembler.py  response_models.py  stream_orchestrator.py  stream_relay.py  upstream_client.py  upstream_plan.py  upstream_strategy.py  upstream_transport.py
modeio_middleware/monitoring/: __init__.py  api.py
modeio_middleware/plugins/: base.py  redact.py  redact_utils.py
modeio_middleware/runtime/: base.py  legacy_inprocess.py  manager.py  stdio_jsonrpc.py  supervisor.py
scripts/: build_dashboard.sh  dev_gateway.py  middleware.py  release_check.sh  smoke_agent_matrix.py  smoke_e2e.sh  upstream_tap_proxy.py
tests/: README.md
(+112 files in other folders)
