[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeio-middleware"
version = "0.1.0"
description = "Policy gateway middleware for OpenAI-shaped HTTP traffic and connector hooks."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["llm", "middleware", "gateway", "proxy", "plugins"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: Proxy Servers",
]
dependencies = [
  "httpx>=0.27,<1",
  "starlette>=0.37,<1",
  "tomli>=2,<3; python_version < '3.11'",
  "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/mode-io/mode-io-middleware"
Repository = "https://github.com/mode-io/mode-io-middleware"
Issues = "https://github.com/mode-io/mode-io-middleware/issues"
Documentation = "https://github.com/mode-io/mode-io-middleware/blob/main/QUICKSTART.md"

[project.scripts]
modeio-middleware-gateway = "modeio_middleware.cli.gateway:main"
modeio-middleware-setup = "modeio_middleware.cli.setup:main"
modeio-middleware-new-plugin = "modeio_middleware.cli.new_plugin:main"
modeio-middleware-validate-plugin = "modeio_middleware.cli.validate_plugin_manifest:main"
modeio-middleware-plugin-conformance = "modeio_middleware.cli.plugin_conformance:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modeio_middleware*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
modeio_middleware = [
  "resources/config/*.json",
  "resources/dashboard/*.html",
  "resources/dashboard/assets/*",
  "resources/plugins_external/example/*.json",
  "resources/plugins_external/example/*.py",
  "resources/plugins_external/example/*.md",
  "resources/protocol/*.json",
]
